ik_suggest.js works to choose the first element of the list, but the arrow keys don't go to next item. Added jquery styles to styles.css. Starting jquery version of combobox in suggestGail.html

--- a/styles.css
+++ b/styles.css
@@ -594,3 +594,13 @@ div .divider {
 		width:90%
 	}
 }
+
+/* from the jquery css file */
+table {
+	font-size: 1em;
+}
+
+.ui-draggable, .ui-droppable {
+	background-position: top;
+}
+/* end from the jquery css file */
